# CryptoWrapperForCCode

./: .gitignore  README.md
BaseLib/AES/include/: cryptlib.h  crypto.h  e_os.h  evp.h  modes_lcl.h
BaseLib/AES/src/: CryptoWrapper.cpp  (+19 more)
common/: BaseThread.cpp  BaseThread.h  Buffer.cc  Buffer.h  Common.c  Common.h  CriticalSection.h  HttpBase.cc  HttpBase.h  INetClient.h  LpConfig.c  LpConfig.h  NetClient.cpp  NetClient.h  NetClientBase.h  NetCommon.h  PackDef.cc  PackDef.h  ParsePdu.cc  ParsePdu.h  TcpNetClient.cpp  TcpNetClient.h  TcpParsePdu.h  TraceLog.cpp  TraceLog.h  TypeDef.h  UdpNetClient.cpp  UdpNetClient.h  Utils.cpp  Utils.h
localproxy/doc/: Release.txt
localproxy/include/: ILocalProxy.h  LocalProxyCommon.h
localproxy/src/: LocalProxy.vcproj  LocalProxy.vcxproj  LocalProxy.vcxproj.filters  LocalProxyImpl.cpp  LocalProxyImpl.h  NetTestManager.cpp  NetTestManager.h  RemoteTransport.cpp  RemoteTransport.h  RtpChannel.cpp  RtpChannel.h  RtpChannelManager.cpp  RtpChannelManager.h  SipRelay.cpp  SipRelay.h
localproxy/test/: Test.cpp  Test.h  Test.vcproj  Test.vcxproj  Test.vcxproj.filters
relayserver/: Accept.cc  Accept.h  Authentication.cpp  Authentication.h  CMakeLists.txt  Channel.cc  Channel.h  Connection.cc  Connection.h  EventLoopThread.cc  EventLoopThread.h  Hash.cc  Hash.h  Mutex.h  NetCommon.h  Poll.cc  Poll.h  Session.cc  Session.h  SessionManager.cc  SessionManager.h  Socket.cc  Socket.h  Start.sh  TCPConnection.cc  TCPConnection.h  Thread.cc  Thread.h  Timer.cc  Timer.h  UDPConnection.cc  UDPConnection.h  main.cc  readme.txt  relayserver.cfg
(+87 files in other folders)
